[project]
name = "boston-restaurants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasette-cluster-map>=0.18.2",
    "datasette-geojson-map>=0.5.0",
    "datasette>=0.65",
    "geojson-to-sqlite>=1.1.1",
    "sqlite-colorbrewer>=0.2",
    "sqlite-utils>=3.37",
]
